Inseri mais um paragrafo!

--- a/Site-exemplo/index.html
+++ b/Site-exemplo/index.html
@@ -10,6 +10,7 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit minima voluptate ipsa, ducimus repellat animi quis alias aliquam dolores? At aspernatur repudiandae corrupti fuga odio animi nostrum neque repellat iure.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit minima voluptate ipsa, ducimus repellat animi quis alias aliquam dolores? At aspernatur repudiandae corrupti fuga odio animi nostrum neque repellat iure.</p>
     
 </body>
 </html>
